Simplified TranslateController. Removed all Collectors in YandexTranslateService. Changed on .toList(). Added some javadoc